# ICM20649

./: CMakeLists.txt  stm32l4cube.cmake
Inc/: ICM20649.h  main.h  stm32l4xx_it.h
Src/: ICM20649.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Test/: ICM20649.test.cpp
